add note about special characters in regex patterns

--- a/channel-testing/yaml/templates/package-template-basic.yaml
+++ b/channel-testing/yaml/templates/package-template-basic.yaml
@@ -30,6 +30,7 @@ assets:  # Optional list of assets from which to extract files (zero or more)
 - assetId: "memo-testing-file-d-zip"
   # Optional RegEx include patterns matched against the path inside the archive
   # (starting with and separated by _forward_ slashes for platform independence).
+  # Note that special characters need to be escaped: \.[]{}()<>*+-=!?^$| (see https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html).
   # The matching is case-insensitive for file-system independence.
   # By default, every file is included.
   include:
