add author and conflicts fields

--- a/channel-testing/template-empty.yaml
+++ b/channel-testing/template-empty.yaml
@@ -10,7 +10,9 @@ assets:
 info:
   summary: "<one-line summary>"
   warning: ""
+  conflicts: ""
   description: ""
+  author: ""
   images: []
   website: ""
 
