upgrade to bsc:no-maxis 2
fixes no-water bug

--- a/channel/yaml/bsc/no-maxis.yaml
+++ b/channel/yaml/bsc/no-maxis.yaml
@@ -1,16 +1,16 @@
 assetId: "bsc-no-maxis"
-version: "1"
-lastModified: "2023-07-20T00:44:36Z"
-url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=26:bsc-no-maxis"
+version: "2-RC1"
+lastModified: "2023-10-01T15:10:04Z"
+url: "https://github.com/memo33/sc4pac-tools/releases/download/0.1.0/BSC-No-Maxis-2_RC1.zip"
 
 ---
 group: "bsc"
 name: "no-maxis-i-d"
-version: "1"
+version: "2"
 subfolder: "900-overrides"
 assets:
 - assetId: "bsc-no-maxis"
-  include: [ "/Stop_Maxis_I-d[123].dat" ]
+  include: [ "/Stop_Maxis_I-D[123].dat" ]
 info:
   summary: "Stop dirty industry Lots from growing (I-d1, I-d2, I-d3)"
   conflicts: Must load after other Maxis Lot replacement mods such as CAM.
@@ -19,11 +19,11 @@ info:
 ---
 group: "bsc"
 name: "no-maxis-i-m"
-version: "1"
+version: "2"
 subfolder: "900-overrides"
 assets:
 - assetId: "bsc-no-maxis"
-  include: [ "/Stop_Maxis_I-m[123].dat" ]
+  include: [ "/Stop_Maxis_I-M[123].dat" ]
 info:
   summary: "Stop manufacturing industry Lots from growing (I-m1, I-m2, I-m3)"
   conflicts: Must load after other Maxis Lot replacement mods such as CAM.
@@ -32,11 +32,11 @@ info:
 ---
 group: "bsc"
 name: "no-maxis-i-ht"
-version: "1"
+version: "2"
 subfolder: "900-overrides"
 assets:
 - assetId: "bsc-no-maxis"
-  include: [ "/Stop_Maxis_I-ht[123].dat" ]
+  include: [ "/Stop_Maxis_I-HT[123].dat" ]
 info:
   summary: "Stop high-tech industry Lots from growing (I-ht1, I-ht2, I-ht3)"
   conflicts: Must load after other Maxis Lot replacement mods such as CAM.
@@ -45,11 +45,11 @@ info:
 ---
 group: "bsc"
 name: "no-maxis-farms"
-version: "1"
+version: "2"
 subfolder: "900-overrides"
 assets:
 - assetId: "bsc-no-maxis"
-  include: [ "/Prevent_I-r_Lots.dat" ]
+  include: [ "/Stop_Maxis_I-R[123].dat" ]
 info:
   summary: "Stop agricultural industry Lots from growing (I-R)"
   conflicts: Must load after other Maxis Lot replacement mods such as CAM.
