add support for shared dependencies and assets between variants in yaml files

--- a/channel-testing/template-empty.yaml
+++ b/channel-testing/template-empty.yaml
@@ -7,6 +7,17 @@ assets:
 - assetId: "<unique-id>"
   include: []
   exclude: []
+
+variants:
+- variant: {}
+  dependencies: []
+  assets:
+  - assetId: "<unique-id>"
+    include: []
+    exclude: []
+
+variantDescriptions: {}  # key -> value -> description
+
 info:
   summary: "<one-line summary>"
   warning: ""
