--- a/channel-testing/yaml/templates/package-template-basic.yaml
+++ b/channel-testing/yaml/templates/package-template-basic.yaml
@@ -59,6 +59,8 @@ info:
     Longer text with some details.
 
     Yet more text…
+
+    Use syntax `pkg=group:name` to reference packages in description text.
   author: ""  # original author of the content, if useful
   images: [ "img1.png", "img2.png" ]
   website: "example.org"
