--- a/channel-testing/yaml/templates/package-template-basic.yaml
+++ b/channel-testing/yaml/templates/package-template-basic.yaml
@@ -52,15 +52,23 @@ assets:  # Optional list of assets from which to extract files (zero or more)
 # Additional descriptive information, entirely optional.
 info:
   summary: "One-line summary"
-  warning: >
+  warning: |
     Special instructions to display before installation, such as bulldozing requirements.
   conflicts: "Notes about incompatibilities"
-  description: >
+  description: |
     Longer text with some details.
 
     Yet more text…
 
-    Use syntax `pkg=group:name` to reference packages in description text.
+    Use the syntax `pkg=group:name` to reference packages in description text.
+
+    ### Markdown
+
+    Common **Markdown** syntaxes like *emphasis*, [URLs](https://memo33.github.io/sc4pac/)
+    or lists are supported:
+    - one
+    - two
+    - three
   author: ""  # original author of the content, if useful
   images: [ "img1.png", "img2.png" ]
   website: "example.org"
