add `websites` field to metadata
Resolves #22

--- a/channel-testing/template-empty.yaml
+++ b/channel-testing/template-empty.yaml
@@ -25,7 +25,8 @@ info:
   description: ""
   author: ""
   images: []
-  website: ""
+  # website: ""
+  websites: []
 
 ---
 assetId: "<unique-id>"
