--- a/channel-testing/yaml/templates/package-template-basic.yaml
+++ b/channel-testing/yaml/templates/package-template-basic.yaml
@@ -82,7 +82,8 @@ info:
     - three
   author: ""  # original author of the content, if useful
   images: [ "img1.png", "img2.png" ]
-  website: "example.org"
+  website: "https://example.org"
+  # websites: []  # alternative for when there are multiple websites
 
 # The .yaml files can contain any number of assets and packages.
 # The location of the .yaml files does not matter, so they can be organized in a reasonable directory structure.
