--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -12,17 +12,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
         cache: 'sbt'
     - uses: sbt/setup-sbt@v1
-    - name: Compile
-      run: sbt compile
-    - name: Run tests
+    - name: Build
+      run: make dist && ./sc4pac --version && sha256sum target/dist/sc4pac*.zip
+    - name: Test
       run: sbt test
-    - name: Build executable jar
-      run: sbt assembly && ./sc4pac --version
