add support for descriptions for variant IDs

--- a/channel-testing/template-empty.yaml
+++ b/channel-testing/template-empty.yaml
@@ -16,7 +16,13 @@ variants:
     include: []
     exclude: []
 
-variantDescriptions: {}  # key -> value -> description
+# variantInfo:
+# - variantId: ""
+#   description: ""
+#   values:
+#   - value: ""
+#     description: ""
+#     default: true
 
 info:
   summary: "<one-line summary>"
