--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,5 +24,10 @@ jobs:
     - uses: sbt/setup-sbt@v1
     - name: Build
       run: make dist && ./sc4pac --version && sha256sum target/dist/sc4pac*.zip
+    - uses: actions/upload-artifact@v4
+      with:
+        name: sc4pac-cli-artifact
+        path: target/dist/sc4pac*.zip
+        retention-days: 7
     - name: Test
       run: sbt test
