extend yaml format to accept arrays of packages and assets

--- a/channel-testing/yaml/memo/conflicting-package.yaml
+++ b/channel-testing/yaml/memo/conflicting-package.yaml
@@ -1,6 +1,9 @@
-group: "memo"
-name: "conflicting-package"
-version: "1.0"
-subfolder: "150-mods"
-conflicting:
-- "memo:package-template-variants"
+assets: []
+
+packages:
+- group: "memo"
+  name: "conflicting-package"
+  version: "1.0"
+  subfolder: "150-mods"
+  conflicting:
+  - "memo:package-template-variants"
